# fastapi-langgraph-mcp-agent

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  Makefile  PRD.md  README.md  fly.toml  pyproject.toml
app/: access.py  adaptive_learning.py  adaptive_learning_store.py  agent_lanes.py  clerk_auth.py  clerk_entitlements.py  clerk_welcome.py  config.py  constants.py  document_extract.py  lifespan.py  limiting.py  main.py  mcp_http.py  message_content.py  schemas.py  subscription_view.py  thread_registry.py  timetable_context.py  timetable_import.py  timetable_messaging.py  timetable_notify_ai.py  timetable_scheduler.py  timetable_store.py  trust_safety.py  workflow_ops.py
app/mcp_server/: __init__.py  server.py
app/routers/: __init__.py  account_routes.py  health.py  site.py  timetable_routes.py  webhooks.py  workflow_routes.py
app/static/: assessment.html  chat.html  gate.html  index.html
app/workflows/: builtin_tools.py  graph.py  supervisor.py  team_router.py
frontend/: .env.local.example  next.config.ts  package-lock.json  package.json
frontend/public/data/: gtec_terchiary.json  gtec_tertiary.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/data/: assessmentSubjectFocus.ts
frontend/src/hooks/: useWorkflowChat.ts
frontend/src/lib/: api.ts  clerkFapiProxy.ts  studyPlanParser.ts  (+4 more)
scripts/: merge_gtec_csv.py
tests/: test_adaptive_learning.py  test_builtin_tools_workspace.py  test_cors_config.py  test_curriculum_topic_lookup.py  test_subscription_view.py  test_user_risk_tags.py
(+39 files in other folders)
